# toy-compilation-labs

./: .gitignore  CMakeLists.txt  push.sh
ast-interpreter/: ASTInterpreter.cpp  Environment.h  binary_operator.cpp  call_ret.cpp  cast.cpp  declare.cpp  env_utils.cpp  heap.h  log.cpp  log.h  stack.h  unary_operator.cpp  value.cpp  value.h
be-cautios-to-use/: pull.sh
data-flow-analysis/: CMakeLists.txt  FuncPointerDataFlow.cpp  FuncPointerDataFlow.h  LLVMAssignment.cpp  log.cpp  log.h  print.cpp  utils.cpp
func-pointer/: CMakeLists.txt  LLVMAssignment.cpp  log.cpp  log.h
test-util/: test.py
